--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  margin: 0 auto;
+  width: 90%;
+  /* background-color: lightblue; */
+}
+
+.books {
+  /* margin: 0 auto; */
+  /* background-color: lightcoral; */
+  padding: 5px;
 }
 
 .App-logo {
