--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,10 @@
   text-align: center;
   margin: 0 auto;
   width: 90%;
-  /* background-color: lightblue; */
+  text-align: center;
 }
 
 .books {
-  /* margin: 0 auto; */
-  /* background-color: lightcoral; */
   padding: 5px;
 }
 
