ユーザ名変更（一時的）

--- a/src/Login.css
+++ b/src/Login.css
@@ -1,10 +1,9 @@
 .user__name {
-  width: 100px;
   text-align: center;
   margin: 0 auto;
   color: #111;
 }
 
-.user__name:hover {
+.user__button:hover {
   cursor: pointer;
 }
