--- a/src/TitleSelect.css
+++ b/src/TitleSelect.css
@@ -1,10 +1,5 @@
 .select__title {
-  width: 50%;
+  width: 55%;
   margin: 0 auto;
-}
-
-.demo-simple-select {
-  /* width: 50%; */
-  /* margin: 0 auto; */
-  text-align: center;
+  padding-top: 10px;
 }
