--- a/src/css/Book.css
+++ b/src/css/Book.css
@@ -21,5 +21,7 @@
 @media screen and (max-width: 480px) {
   .book {
     min-height: 375px;
+    padding:  5px 0;
+    border-top: 1px solid #999;
   }
 }
