--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,4 +1,12 @@
 .mainBook {
   border-bottom: 1px solid #000;
   padding-top: 5px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 480px) {
+  .mainBook {
+    width: 100%;
+  }
 }
