--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -5,6 +5,9 @@
   margin: 0 auto;
 }
 
+@media screen and (max-width: 959px) {
+}
+
 @media screen and (max-width: 480px) {
   .mainBook {
     width: 100%;
