--- a/src/css/Book.css
+++ b/src/css/Book.css
@@ -18,10 +18,13 @@
   justify-content: center;
 }
 
+@media screen and (max-width: 959px) {
+}
+
 @media screen and (max-width: 480px) {
   .book {
     min-height: 375px;
-    padding:  5px 0;
+    padding: 5px 0;
     border-top: 1px solid #999;
   }
 }
