--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  align-items: center;
 }
 
 @media screen and (max-width: 959px) {
