--- a/src/css/Book.css
+++ b/src/css/Book.css
@@ -12,6 +12,16 @@
   text-align: center;
 }
 
+.book__body__body {
+  font-size: 16px;
+  color: #000000;
+}
+
+.book__body__title {
+  font-size: 14px;
+  color: #00000099;
+}
+
 .book__edit {
   align-items: center;
   display: flex;
@@ -23,8 +33,33 @@
 
 @media screen and (max-width: 480px) {
   .book {
-    min-height: 375px;
     padding: 5px 0;
     border-top: 1px solid #999;
+  }
+
+  .book__modal {
+    border-top: 1px solid #999;
+    border-bottom: 1px solid #999;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    min-height: 375px;
+  }
+
+  .book__item__modal {
+    width: 95%;
+    /* padding:0 5px ; */
+    margin: 0 auto;
+    font-size: 16px;
+    color: #000000;
+  }
+
+  .book__item__modal > span {
+    font-size: 14px;
+    color: #00000099;
+  }
+
+  .book__body__modal {
+    text-align: center;
   }
 }
