--- a/src/css/Book.css
+++ b/src/css/Book.css
@@ -39,8 +39,8 @@
   }
 
   .book__modal {
-    border-top: 1px solid #999;
-    border-bottom: 1px solid #999;
+    /* border-top: 1px solid #999; */
+    /* border-bottom: 1px solid #999; */
     display: flex;
     align-items: center;
     text-align: center;
