--- a/src/css/Book.css
+++ b/src/css/Book.css
@@ -23,6 +23,12 @@
   cursor: pointer;
 }
 
+.book__body__title {
+  font-size: 12px;
+  color: #00000099;
+  cursor: pointer;
+}
+
 .book__edit {
   align-items: center;
   display: flex;
