--- a/src/css/Book.css
+++ b/src/css/Book.css
@@ -23,7 +23,7 @@
   cursor: pointer;
 }
 
-.book__body__title {
+.book__body__title__number {
   font-size: 12px;
   color: #00000099;
   cursor: pointer;
